<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="150dp"
    android:paddingEnd="0dp"
    >

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/content_description_for_layout_1"
        android:background="@color/purple_700"
        />

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/content_descriptor_for_button"
        android:background="@color/purple_500"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/text_for_layout_1"
        />
</LinearLayout>