<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text"
            android:text="@string/just_long_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/vg2"
            app:layout_constraintTop_toTopOf="@id/hg1"/>

        <Button
            android:id="@+id/button"
            android:text="@string/button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintBottom_toTopOf="@id/progressBar"
            app:layout_constraintEnd_toStartOf="@id/vg1"
            app:layout_constraintStart_toStartOf="@id/vg2"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/imageButton"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/content_descriptor_for_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/purple_700"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageView"
            app:layout_constraintBottom_toTopOf="@id/calendar"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            />

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintBottom_toTopOf="@id/text"
            app:layout_constraintEnd_toEndOf="@id/imageView" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintTop_toBottomOf="@id/button"
            app:layout_constraintBottom_toTopOf="@id/imageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageView"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@tools:sample/avatars"
            android:contentDescription="@string/content_descriptor_for_avatar"
            android:background="@color/purple_500"
            app:layout_constraintDimensionRatio="1:2"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintEnd_toStartOf="@id/switchCompat"
            app:layout_constraintTop_toBottomOf="@id/button"
            app:layout_constraintBottom_toTopOf="@id/calendar"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchCompat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/vg1"
            app:layout_constraintBottom_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toEndOf="@id/button"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vg1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.8"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>